ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mern-backend-service
                port:
                  number: 80
